traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.code

//var diag = 0;

var i=0

def diag() {
  for(j<-1 to 6) {
  	setPos(i,j)
    while (!estFaceMur()) {
      setPos(i,j)
      i=i+1
      j=j+1
    }
   	
  }}

















override def run() {
  diag()
}